# suep2027-autoaim

./: .gitignore  CMakeLists.txt
2027rm_ws/build-perf/: CMakeCache.txt  Makefile  cgraph_camera_detector  cmake_install.cmake
2027rm_ws/config/: camera_info.yaml  config.yaml  yolo_config.yaml
2027rm_ws/docs/: aat_gaf_tracker方案.html  cgraph_dump_raw.dot  cgraph_dump_zh_flow.dot
2027rm_ws/include/: CameraParams.h
2027rm_ws/include/CGraph/src/UtilsCtrl/Timer/: UTimeCounter.h
2027rm_ws/include/CGraph/test/Functional/: test-functional-01.cpp  test-functional-02.cpp
2027rm_ws/output/: cgraph_pipeline.dot  test1
2027rm_ws/perf/: perf.data
2027rm_ws/src/: CKF.cpp  camera.cpp  camera_node.hpp  cgraph_camera_detector.cpp  detector.cpp  detector_node.hpp  display_node.cpp  display_node.hpp  message_pool.hpp  pnp_solver.cpp  postprocess.cpp  postprocess.hpp  profiling.cpp  startup_main.cpp  thread_startup.hpp  yolo.cpp  yolo_app.hpp  yolo_config_loader.cpp  yolo_config_loader.hpp  yolo_openvino.cpp  yolo_openvino.hpp
2027rm_ws/src/app/: startup_main.cpp  yolo_app.hpp  yolo_config_loader.cpp
2027rm_ws/src/camera/: camera.cpp  camera_node.hpp
2027rm_ws/src/common/: aligned_mat.hpp  logging.hpp  memory_layout.hpp  message_pool.hpp  profiling.cpp  profiling.hpp  thread_affinity.cpp  thread_affinity.hpp  thread_startup.hpp
2027rm_ws/src/display/: display_node.cpp
2027rm_ws/src/pose/: RGO_Tracker.cpp  Tracker.cpp  pnp_solver.cpp
2027rm_ws/src/serial/: serial_imu_node.cpp  serial_protocol.cpp  serial_protocol.hpp
2027rm_ws/src/vision/: postprocess.cpp  postprocess.hpp  yolo.cpp  yolo_common.hpp  yolo_openvino.cpp  yolo_openvino.hpp
2027rm_ws/tools/: foxglove_ros2_publisher.py  hik_camera_calibrate.cpp  make_perf_flamegraph.py  perf_profile_detector.sh  start_debug_foxglove.sh  stop_debug_foxglove.sh
